--- a/code/2_exploratory_analysis/exploratory_test.ipynb
+++ b/code/2_exploratory_analysis/exploratory_test.ipynb
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1357,20 +1357,20 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rul = pd.DataFrame(df_test.groupby('unit_number')['time'].max()).reset_index()\n",
-    "rul.columns = ['id', 'max']\n",
-    "rul"
+    "df_test_rul = pd.DataFrame(df_test.groupby('unit_number')['time'].max()).reset_index()\n",
+    "df_test_rul.columns = ['id', 'max']\n",
+    "df_test_rul"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "      <th></th>\n",
        "      <th>max</th>\n",
        "      <th>unit_number</th>\n",
-       "      <th>rtf</th>\n",
+       "      <th>TOTAL_RUL</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1590,35 +1590,35 @@
        "</div>"
       ],
       "text/plain": [
-       "      max  unit_number    rtf\n",
-       "0   112.0            1  143.0\n",
-       "1    98.0            2  147.0\n",
-       "2    69.0            3  195.0\n",
-       "3    82.0            4  188.0\n",
-       "4    91.0            5  189.0\n",
-       "..    ...          ...    ...\n",
-       "95  137.0           96  234.0\n",
-       "96   82.0           97  216.0\n",
-       "97   59.0           98  180.0\n",
-       "98  117.0           99  214.0\n",
-       "99   20.0          100  218.0\n",
+       "      max  unit_number  TOTAL_RUL\n",
+       "0   112.0            1      143.0\n",
+       "1    98.0            2      147.0\n",
+       "2    69.0            3      195.0\n",
+       "3    82.0            4      188.0\n",
+       "4    91.0            5      189.0\n",
+       "..    ...          ...        ...\n",
+       "95  137.0           96      234.0\n",
+       "96   82.0           97      216.0\n",
+       "97   59.0           98      180.0\n",
+       "98  117.0           99      214.0\n",
+       "99   20.0          100      218.0\n",
        "\n",
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_rul['rtf']=rul['max']+df_rul['max']\n",
+    "df_rul['TOTAL_RUL'] = df_test_rul['max'] + df_rul['max']\n",
     "df_rul"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1627,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unit_number</th>\n",
+       "      <th>time</th>\n",
+       "      <th>setting_1</th>\n",
+       "      <th>setting_2</th>\n",
+       "      <th>sensor_2</th>\n",
+       "      <th>sensor_3</th>\n",
+       "      <th>sensor_4</th>\n",
+       "      <th>sensor_6</th>\n",
+       "      <th>sensor_7</th>\n",
+       "      <th>sensor_8</th>\n",
+       "      <th>sensor_9</th>\n",
+       "      <th>sensor_11</th>\n",
+       "      <th>sensor_12</th>\n",
+       "      <th>sensor_13</th>\n",
+       "      <th>sensor_14</th>\n",
+       "      <th>sensor_15</th>\n",
+       "      <th>sensor_17</th>\n",
+       "      <th>sensor_20</th>\n",
+       "      <th>sensor_21</th>\n",
+       "      <th>TOTAL_RUL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>643.02</td>\n",
+       "      <td>1585.29</td>\n",
+       "      <td>1398.21</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>553.90</td>\n",
+       "      <td>2388.04</td>\n",
+       "      <td>9050.17</td>\n",
+       "      <td>47.20</td>\n",
+       "      <td>521.72</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8125.55</td>\n",
+       "      <td>8.4052</td>\n",
+       "      <td>392.0</td>\n",
+       "      <td>38.86</td>\n",
+       "      <td>23.3735</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.0027</td>\n",
+       "      <td>-0.0003</td>\n",
+       "      <td>641.71</td>\n",
+       "      <td>1588.45</td>\n",
+       "      <td>1395.42</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>554.85</td>\n",
+       "      <td>2388.01</td>\n",
+       "      <td>9054.42</td>\n",
+       "      <td>47.50</td>\n",
+       "      <td>522.16</td>\n",
+       "      <td>2388.06</td>\n",
+       "      <td>8139.62</td>\n",
+       "      <td>8.3803</td>\n",
+       "      <td>393.0</td>\n",
+       "      <td>39.02</td>\n",
+       "      <td>23.3916</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>642.46</td>\n",
+       "      <td>1586.94</td>\n",
+       "      <td>1401.34</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>554.11</td>\n",
+       "      <td>2388.05</td>\n",
+       "      <td>9056.96</td>\n",
+       "      <td>47.50</td>\n",
+       "      <td>521.97</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8130.10</td>\n",
+       "      <td>8.4441</td>\n",
+       "      <td>393.0</td>\n",
+       "      <td>39.08</td>\n",
+       "      <td>23.4166</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0042</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>642.44</td>\n",
+       "      <td>1584.12</td>\n",
+       "      <td>1406.42</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>554.07</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>9045.29</td>\n",
+       "      <td>47.28</td>\n",
+       "      <td>521.38</td>\n",
+       "      <td>2388.05</td>\n",
+       "      <td>8132.90</td>\n",
+       "      <td>8.3917</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>23.3737</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0014</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>642.51</td>\n",
+       "      <td>1587.19</td>\n",
+       "      <td>1401.92</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>554.16</td>\n",
+       "      <td>2388.01</td>\n",
+       "      <td>9044.55</td>\n",
+       "      <td>47.31</td>\n",
+       "      <td>522.15</td>\n",
+       "      <td>2388.03</td>\n",
+       "      <td>8129.54</td>\n",
+       "      <td>8.4031</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>38.99</td>\n",
+       "      <td>23.4130</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0012</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>642.11</td>\n",
+       "      <td>1579.12</td>\n",
+       "      <td>1395.13</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>554.22</td>\n",
+       "      <td>2388.00</td>\n",
+       "      <td>9050.96</td>\n",
+       "      <td>47.26</td>\n",
+       "      <td>521.92</td>\n",
+       "      <td>2388.08</td>\n",
+       "      <td>8127.46</td>\n",
+       "      <td>8.4238</td>\n",
+       "      <td>392.0</td>\n",
+       "      <td>38.91</td>\n",
+       "      <td>23.3467</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>0.0002</td>\n",
+       "      <td>642.11</td>\n",
+       "      <td>1583.34</td>\n",
+       "      <td>1404.84</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>553.89</td>\n",
+       "      <td>2388.05</td>\n",
+       "      <td>9051.39</td>\n",
+       "      <td>47.31</td>\n",
+       "      <td>522.01</td>\n",
+       "      <td>2388.06</td>\n",
+       "      <td>8134.97</td>\n",
+       "      <td>8.3914</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>38.85</td>\n",
+       "      <td>23.3952</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>642.54</td>\n",
+       "      <td>1580.89</td>\n",
+       "      <td>1400.89</td>\n",
+       "      <td>21.61</td>\n",
+       "      <td>553.59</td>\n",
+       "      <td>2388.05</td>\n",
+       "      <td>9052.86</td>\n",
+       "      <td>47.21</td>\n",
+       "      <td>522.09</td>\n",
+       "      <td>2388.06</td>\n",
+       "      <td>8125.93</td>\n",
+       "      <td>8.4213</td>\n",
+       "      <td>393.0</td>\n",
+       "      <td>39.05</td>\n",
+       "      <td>23.3224</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   unit_number  time  setting_1  setting_2  sensor_2  sensor_3  sensor_4  \\\n",
+       "0          1.0   1.0     0.0023     0.0003    643.02   1585.29   1398.21   \n",
+       "1          1.0   2.0    -0.0027    -0.0003    641.71   1588.45   1395.42   \n",
+       "2          1.0   3.0     0.0003     0.0001    642.46   1586.94   1401.34   \n",
+       "3          1.0   4.0     0.0042     0.0000    642.44   1584.12   1406.42   \n",
+       "4          1.0   5.0     0.0014     0.0000    642.51   1587.19   1401.92   \n",
+       "5          1.0   6.0     0.0012     0.0003    642.11   1579.12   1395.13   \n",
+       "6          1.0   7.0    -0.0000     0.0002    642.11   1583.34   1404.84   \n",
+       "7          1.0   8.0     0.0006    -0.0000    642.54   1580.89   1400.89   \n",
+       "\n",
+       "   sensor_6  sensor_7  sensor_8  sensor_9  sensor_11  sensor_12  sensor_13  \\\n",
+       "0     21.61    553.90   2388.04   9050.17      47.20     521.72    2388.03   \n",
+       "1     21.61    554.85   2388.01   9054.42      47.50     522.16    2388.06   \n",
+       "2     21.61    554.11   2388.05   9056.96      47.50     521.97    2388.03   \n",
+       "3     21.61    554.07   2388.03   9045.29      47.28     521.38    2388.05   \n",
+       "4     21.61    554.16   2388.01   9044.55      47.31     522.15    2388.03   \n",
+       "5     21.61    554.22   2388.00   9050.96      47.26     521.92    2388.08   \n",
+       "6     21.61    553.89   2388.05   9051.39      47.31     522.01    2388.06   \n",
+       "7     21.61    553.59   2388.05   9052.86      47.21     522.09    2388.06   \n",
+       "\n",
+       "   sensor_14  sensor_15  sensor_17  sensor_20  sensor_21  TOTAL_RUL  \n",
+       "0    8125.55     8.4052      392.0      38.86    23.3735      143.0  \n",
+       "1    8139.62     8.3803      393.0      39.02    23.3916      143.0  \n",
+       "2    8130.10     8.4441      393.0      39.08    23.4166      143.0  \n",
+       "3    8132.90     8.3917      391.0      39.00    23.3737      143.0  \n",
+       "4    8129.54     8.4031      390.0      38.99    23.4130      143.0  \n",
+       "5    8127.46     8.4238      392.0      38.91    23.3467      143.0  \n",
+       "6    8134.97     8.3914      391.0      38.85    23.3952      143.0  \n",
+       "7    8125.93     8.4213      393.0      39.05    23.3224      143.0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.merge(df_rul, on=['unit_number'], how='left').head(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1975,21 +2253,21 @@
        "[13096 rows x 20 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_test = df_test.merge(df_rul,on=['unit_number'],how='left')\n",
-    "df_test['RUL'] = df_test['rtf'] - df_test['time']\n",
-    "df_test.drop('rtf', axis=1, inplace=True)\n",
+    "df_test = df_test.merge(df_rul, on=['unit_number'], how='left')\n",
+    "df_test['RUL'] = df_test['TOTAL_RUL'] - df_test['time']\n",
+    "df_test.drop('TOTAL_RUL', axis=1, inplace=True)\n",
     "df_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2017,7 +2295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pode observar que a vida restante do turbofan começa com valor elevado e vai descrescendo ao longo do tempo. Porém, nos dados de teste o RUL não chega igual a zero. Isso acontece pois é feito todo um tratamento com dos dados de teste para se obter o valor verdadeiro do RUL. O que deverá ser feito no processamento para os dados de treino:\n",
+    "Pode observar que a vida restante do turbofan começa com valor elevado e vai descrescendo ao longo do tempo. Porém, nos dados de teste o RUL não chega igual a zero. Isso acontece pois é feito todo um tratamento com os dados de teste para se obter o valor verdadeiro do RUL. O que deverá ser feito no processamento para os dados de treino:\n",
     "- **Remoção dos sensores flat**\n",
     "- **Cálculo do RUL** (este cálculo é um pouco mais complexo)"
    ]
@@ -2025,7 +2303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 ('venvTCC')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2044,7 +2322,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c3cb0067fa8c56038811b3eddf10be66eb36dbbf5e04f49808f02465c4a2587e"
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
    }
   }
  },
