✨ feat: Adiciona gráfico com os coeficientes do modelo
Closes #9

--- a/code/4_modeling/2_pycaret.ipynb
+++ b/code/4_modeling/2_pycaret.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Objetivo desse notebook é avaliar, a partir dos resultados do Pycaret, os possíveis modelos a serem testados durante a modelagem"
+    "Objetivo desse notebook é avaliar, a partir dos resultados do Pycaret, os possíveis modelos a serem testados durante a modelagem.\n",
+    "\n",
+    "OBS: Recomenda-se criar um ambiente virtual exclusivo para instalar o Pycaret para evitar conflitos com as versões deste projeto."
    ]
   },
   {
