♻️  refat: Refatoração dos scritps com a criação do pacote util

--- a/code/2_exploratory_analysis/exploratory_test.ipynb
+++ b/code/2_exploratory_analysis/exploratory_test.ipynb
@@ -11,7 +11,7 @@
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
+    "import util\n",
     "from class_format_data import FormatData"
    ]
   },
